--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="assessment.css">
-  <title>あなたのいいところ診断</title>
+  <title>あなたのいいところ診断2020</title>
 </head>
 <body>
   <h1>あなたのいいところは?</h1>
